ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    app: http-svc
  name: http-svc
  namespace: default
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: http-svc
          servicePort: 80
        path: /
